Moved remaining config to endpoint